--- a/Weather.Droid/Weather.Droid/Resources/layout/Main.axml
+++ b/Weather.Droid/Weather.Droid/Resources/layout/Main.axml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/city" />
     <Button
-        android:text="Button"
+        android:text="Search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/search" />
