--- a/Weather.Droid/Weather.Droid/Resources/layout/Main.axml
+++ b/Weather.Droid/Weather.Droid/Resources/layout/Main.axml
@@ -5,19 +5,14 @@
     android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px">
-    <EditText
-        android:layout_width="match_parent"
+  <AutoCompleteTextView
+      android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/city" />
-    <Button
-        android:text="Search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/search" />
-    <ListView
-        android:minWidth="25px"
-        android:minHeight="25px"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/items" />
+  <ListView
+      android:minWidth="25px"
+      android:minHeight="25px"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/items" />
 </LinearLayout>
