--- a/Weather.Droid/Weather.Droid/Resources/layout/Main.axml
+++ b/Weather.Droid/Weather.Droid/Resources/layout/Main.axml
@@ -5,14 +5,51 @@
     android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px">
-  <AutoCompleteTextView
-      android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/city" />
-  <ListView
-      android:minWidth="25px"
-      android:minHeight="25px"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@+id/items" />
+  <LinearLayout
+     android:orientation=    "horizontal"
+     android:layout_width=    "fill_parent"
+     android:layout_height=    "fill_parent"
+     android:layout_weight=    "1">
+    <LinearLayout
+      android:gravity=    "center_horizontal"
+      android:layout_width=    "wrap_content"
+      android:layout_weight=    "1"
+        android:layout_height=    "wrap_content">
+      <TextView
+          android:text=    "Tue"
+          android:layout_width=    "wrap_content"
+          android:layout_height=    "wrap_content" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width=    "wrap_content"
+        android:layout_height=    "wrap_content"
+        android:layout_weight=    "1"
+        android:gravity=    "center_horizontal">
+      <TextView
+        android:text=    "Wed"
+        android:layout_width=    "wrap_content"
+        android:layout_height=    "wrap_content" />
+    </LinearLayout>
+    <LinearLayout
+      android:layout_width=    "wrap_content"
+        android:layout_height=    "wrap_content"
+        android:layout_weight=    "1"
+      android:gravity=    "center_horizontal">
+      <TextView
+        android:text=    "Thu"
+
+        android:layout_width=    "wrap_content"
+        android:layout_height=    "wrap_content" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width=    "wrap_content"
+        android:layout_height=    "wrap_content"
+        android:layout_weight=    "1"
+        android:gravity=    "center_horizontal">
+      <TextView
+        android:text=    "Fri"
+        android:layout_width=    "wrap_content"
+        android:layout_height=    "wrap_content" />
+    </LinearLayout>
+  </LinearLayout>
 </LinearLayout>
