--- a/Weather.Droid/Weather.Droid/Resources/layout/Main.axml
+++ b/Weather.Droid/Weather.Droid/Resources/layout/Main.axml
@@ -5,51 +5,106 @@
     android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px">
-  <LinearLayout
-     android:orientation=    "horizontal"
-     android:layout_width=    "fill_parent"
-     android:layout_height=    "fill_parent"
-     android:layout_weight=    "1">
+    <TextView
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView1" />
+    <ImageView
+        android:src="@android:drawable/ic_menu_gallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView1" />
+    <TextView
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView1" />
     <LinearLayout
-      android:gravity=    "center_horizontal"
-      android:layout_width=    "wrap_content"
-      android:layout_weight=    "1"
-        android:layout_height=    "wrap_content">
-      <TextView
-          android:text=    "Tue"
-          android:layout_width=    "wrap_content"
-          android:layout_height=    "wrap_content" />
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        <LinearLayout
+            android:gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <TextView
+                android:text="Tue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="20°"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:src="@android:drawable/ic_menu_gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/imageView1" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+            <TextView
+                android:text="Wed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="20°"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:src="@android:drawable/ic_menu_gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/imageView1" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+            <TextView
+                android:text="Thu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="20°"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:src="@android:drawable/ic_menu_gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/imageView1" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+            <TextView
+                android:text="Fri"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="20°"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:src="@android:drawable/ic_menu_gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/imageView1" />
+        </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width=    "wrap_content"
-        android:layout_height=    "wrap_content"
-        android:layout_weight=    "1"
-        android:gravity=    "center_horizontal">
-      <TextView
-        android:text=    "Wed"
-        android:layout_width=    "wrap_content"
-        android:layout_height=    "wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-      android:layout_width=    "wrap_content"
-        android:layout_height=    "wrap_content"
-        android:layout_weight=    "1"
-      android:gravity=    "center_horizontal">
-      <TextView
-        android:text=    "Thu"
-
-        android:layout_width=    "wrap_content"
-        android:layout_height=    "wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width=    "wrap_content"
-        android:layout_height=    "wrap_content"
-        android:layout_weight=    "1"
-        android:gravity=    "center_horizontal">
-      <TextView
-        android:text=    "Fri"
-        android:layout_width=    "wrap_content"
-        android:layout_height=    "wrap_content" />
-    </LinearLayout>
-  </LinearLayout>
 </LinearLayout>
