--- a/Weather.Mobile/Weather/Weather/MainPage.xaml
+++ b/Weather.Mobile/Weather/Weather/MainPage.xaml
@@ -1,42 +1,82 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage  x:Class="Weather.MainPage"
+<ContentPage x:Class="Weather.MainPage"
              xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              BackgroundColor="#3D4047">
-  <Grid>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="*" />
-      <RowDefinition Height="2*" />
-      <RowDefinition Height="4*" />
-      <RowDefinition Height="2*" />
-      <RowDefinition Height="2*" />
-    </Grid.RowDefinitions>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="4*" />
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="2*" />
+        </Grid.RowDefinitions>
 
-    <StackLayout>
-      <BoxView Color="#333333" />
-      <BoxView BackgroundColor="White" HeightRequest="1" />
-    </StackLayout>
-    <Label Grid.Row="1"
-           FontSize="32"
-           HorizontalTextAlignment="Center"
-           Text="Wednesday"
-           TextColor="White"
-           VerticalTextAlignment="Center" />
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
 
-    <Label Grid.Row="3"
-           FontSize="32"
-           HorizontalTextAlignment="Center"
-           Text="20°"
-           TextColor="White"
-           VerticalTextAlignment="Center" />
+            <!--  SEARCHER BACKGROUND  -->
+            <BoxView Grid.ColumnSpan="2"
+                     HorizontalOptions="FillAndExpand"
+                     VerticalOptions="FillAndExpand"
+                     Color="#333333" />
+            <Entry Placeholder="Place" 
+                   
+                   TextColor="White"  Margin="20,0,0,0"  />
 
-    <StackLayout Grid.Row="4">
-      <BoxView BackgroundColor="White" HeightRequest="1" />
+            <Image Grid.Column="1" Source="search_icon.png" />
 
-      <Label HorizontalTextAlignment="Center"
-             Text="Bottom"
-             TextColor="White"
-             VerticalTextAlignment="Center" />
-    </StackLayout>
-  </Grid>
+
+            <!--  TOP LINE  -->
+            <BoxView Grid.Row="1"
+                     Grid.ColumnSpan="2"
+                     BackgroundColor="White"
+                     HeightRequest="2"
+                     HorizontalOptions="FillAndExpand"
+                     VerticalOptions="FillAndExpand" />
+        </Grid>
+
+        <!--  CURRENT DAY  -->
+        <Label Grid.Row="1"
+               FontAttributes="Bold"
+               FontSize="56"
+               HorizontalTextAlignment="Center"
+               Text="Wednesday"
+               TextColor="White"
+               VerticalTextAlignment="Center" />
+
+        <!--  CURRENT TEMPERATURE  -->
+        <Label Grid.Row="3"
+               FontSize="48"
+               HorizontalTextAlignment="Center"
+               Text="20°"
+               TextColor="White"
+               VerticalTextAlignment="Center" />
+
+        <!--  BOTTOM  -->
+        <Grid Grid.Row="4">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+
+            <!--  BOTTOM LINE  -->
+            <BoxView Margin="10,0,10,0"
+                     BackgroundColor="White"
+                     HeightRequest="2" />
+
+            <Label Grid.Row="1"
+                   HorizontalTextAlignment="Center"
+                   Text="Bottom"
+                   TextColor="White"
+                   VerticalTextAlignment="Center" />
+        </Grid>
+    </Grid>
 </ContentPage>
