--- a/Weather.Mobile/Weather/Weather/MainPage.xaml
+++ b/Weather.Mobile/Weather/Weather/MainPage.xaml
@@ -24,12 +24,13 @@
             </Grid.RowDefinitions>
 
             <!--  SEARCHER BACKGROUND  -->
-            <BoxView Grid.ColumnSpan="2"
+            <BoxView Grid.RowSpan="2"
+                     Grid.ColumnSpan="2"
                      HorizontalOptions="FillAndExpand"
                      VerticalOptions="FillAndExpand"
                      Color="#333333" />
             <Entry Margin="20,0,0,0"
-                   Placeholder="Place"
+                   
                    TextColor="White" />
 
             <Image Grid.Column="1" Source="search_icon.png" />
@@ -73,7 +74,7 @@
                HorizontalTextAlignment="Center"
                Text="Wednesday"
                TextColor="White" />
-      
+
         <!--  BOTTOM  -->
         <Grid Grid.Row="5">
             <Grid.RowDefinitions>
@@ -92,7 +93,7 @@
 
             <!--  BOTTOM LINE  -->
             <BoxView Grid.ColumnSpan="7"
-                     Margin="10,0,10,0"
+                     Margin="15,0,15,0"
                      BackgroundColor="#BCBCBC"
                      HeightRequest="2" />
 
@@ -120,7 +121,7 @@
                      Margin="0,15,0,15"
                      BackgroundColor="#BCBCBC"
                      WidthRequest="2" />
-          
+
             <!--  WETHER INFORMATION + 2 DAYS  -->
             <StackLayout Grid.Row="1"
                          Grid.Column="2"
